--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,18 @@ services:
   app:
     build: .
     env_file: .env
-    ports:
-      - "8080:8080"
     restart: unless-stopped
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+
+volumes:
+  rabbitmq-data:
